--- a/static/index.html
+++ b/static/index.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="favicon.ico">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
 
-  <title>Cassandra Quick Access</title>
+    <title>Cassandra Quick Access</title>
 
-  <!-- Bootstrap CSS -->
-  <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css" rel="stylesheet">
 
-    <!--
-    // Select one of these: 
-  <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css" rel="stylesheet">
-  <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/slate/bootstrap.min.css" rel="stylesheet">
-  <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/superhero/bootstrap.min.css" rel="stylesheet">
-  <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css" rel="stylesheet">
-  <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/lumen/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome! -->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
--->
-
-<!-- Font Awesome! -->
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
-<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -47,142 +37,216 @@
         li.meta-columns span.cql-kind {
           width: 10px;
         }
+
+        /* CQL tab results */
         .alert {
             margin-top: 10px;
         }
+        div.results {
+            overflow: auto;
+        }
+
+        /* CQL Tab's Schema Side Menu*/
+        .panel-heading {
+            padding: 5px 8px;
+        }
+        .panel-title > a {
+          font-family: courier;
+          color: #eee;
+          text-decoration: none;
+          font-size: 80%;
+        }
+        #sidebar-meta-panel a > span.plus {
+          display: none;
+        }
+        #sidebar-meta-panel a.collapsed > span.minus {
+          display: none;
+        }
+        #sidebar-meta-panel a > span.minus {
+          display: inline;
+        }
+        #sidebar-meta-panel a.collapsed > span.plus {
+          display: inline;
+        }
+        .panel>.list-group .list-group-item {
+            font-size: 90%;
+            padding: 4px 0px 0px 15px;
+        }
+        li.column-listing > span {
+            border: 0px solid #aaa;
+            display: inline-block;
+            width: 50px;
+            overflow: auto;
+            white-space: nowrap;
+        }
+        li.column-listing > span.col-name {
+            width: 110px;
+        }
+        li.column-listing > span.col-type {
+            width: 80px;
+        }
+        li.column-listing > span.col-kind {
+            width: 20px;
+        }
+
+        /* Table tab*/
+        div.table-selector label {
+          display: inline-block;
+          width: 250px;
+        }
+
       </style>
-    </head>
-    <body>
-      <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">CStar UI</a>
+  </head>
+  <body>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">CStar UI</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav" id="topmenu">
+            <li><a href="#tab-cql">CQL</a></li>
+            <li><a href="#tab-tables">Tables</a></li>
+            <li><a href="#tab-meta">Metadata</a></li>
+            <li><a href="#tab-other">Other</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="container" id="main">
+      <!-- ================================== CQL TAB here ==================================  -->
+        <div id="tab-cql">
+          <div class="col-md-9">
+            <h3>Let's Execute Some CQL</h3>
+            <div class="form-group">
+              <label for="comment">CQL Query:</label>
+              <textarea class="form-control" rows="4" id="textarea-cql">SELECT * FROM testme.users;</textarea>
+            </div>
+
+            <div class="btn-toolbar">
+              <button type="button" class="btn btn-success" id="btn-cql">
+                <span class="glyphicon glyphicon-play" aria-hidden="true"></span> Run Query
+              </button>
+            </div>
+
+            <div class="alert alert-danger" role="alert" data-bind="visible: VIEW.cqlError">
+              <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+              <span class="sr-only">Error:</span>
+              <span id="cql-error"><span data-bind="text: VIEW.cqlErrorMsg"></span></span>
+            </div>
+
+            <div class="results" id="cql-results" data-bind="visible: VIEW.cqlItems().length > 0">
+              <h4>Results</h4>
+              <table class="table table-striped">
+                <thead>
+                  <tr data-bind="foreach: {data: VIEW.cqlColumnNames, as: 'cName'}">
+                    <th> <span data-bind="text: cName"></span> </th>
+                  </tr>
+                </thead>
+                <tbody data-bind="foreach: VIEW.cqlItems">
+                  <tr data-bind="foreach: $parent.cqlColumnNames">
+                      <td data-bind="text: $parent[$data]"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav" id="topmenu">
-              <li><a href="#tab-cql">CQL</a></li>
-              <li><a href="#tab-tables">Tables</a></li>
-              <li><a href="#tab-meta">Metadata</a></li>
-              <li><a href="#tab-other">Other</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+          <div class="col-md-3">
+            <div class="panel-group" id="sidebar-meta-panel"  data-bind="foreach: {data: VIEW.META, as: 'keyspace'}">
+              <h4 data-bind="text: keyspace.name"></h4>
+              <div class="panel panel-info" data-bind="foreach: { data: keyspace.tables, as: 'table' }">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <span data-bind="text: table.name"></span>
+                    <a data-toggle="collapse" class="collapsed" data-bind="attr: { href: '#side_' + table.name}">[<span class="minus">-</span><span class="plus">+</span>]</a>
+                  </h4>
+                </div>
+                <ul class="list-group panel-collapse collapse" data-bind="attr: { id: 'side_' + table.name}, foreach: { data: table.columns, as: 'column' }">
+                  <li class="list-group-item column-listing">
+                    <span class="col-name" data-bind="text: column.name">year_month</span>
+                    <span class="col-type" data-bind="text: column.type">>Timestamp</span>
+                    <span class="col-kind" data-bind="text: column.kind">K</span>
+                  </li>
+                </ul>
+            </div>
+          </div>
         </div>
       </div>
-
-      <div class="container" id="main">
-        <!-- ================================== CQL TAB here ==================================  -->
-        <div id="tab-cql">
-          <h3>Let's Execute Some CQL</h3>
-          <div class="form-group">
-            <label for="comment">CQL Query:</label>
-            <textarea class="form-control" rows="4" id="textarea-cql">SELECT * FROM testme.users;</textarea>
+      <!-- ================================== TABLES TAB here ==================================  -->
+      <div id="tab-tables">
+        <h3>Let's Work With Tables</h3>
+        <div class="checkbox">
+          <div id="meta-display">
+            <div data-bind="foreach: {data: VIEW.META, as: 'keyspace'}">
+              <h4>Keyspace: <span data-bind="text: keyspace.name"></span></h4>
+              <div data-bind="foreach: { data: keyspace.tables, as: 'table' }" class="table-selector well">
+                <label><input type="checkbox" class="table-selector-checkbox" data-bind="value: keyspace.name + '.' + table.name" ><span data-bind="text: table.name"></span></label>
+              </div>
+            </div>
           </div>
+        </div>
+        <div class="btn-toolbar">
+          <button type="button" class="btn btn-success" id="select-star-button">
+            <span class="glyphicon glyphicon-list" aria-hidden="true"></span> Select *
+          </button>
+          <button type="button" class="btn btn-danger">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Truncate
+          </button>
+        </div>
 
-          <div class="btn-toolbar">
-            <button type="button" class="btn btn-success" id="btn-cql">
-              <span class="glyphicon glyphicon-play" aria-hidden="true"></span> Run Query
-            </button>
-          </div>
-
-          <div class="alert alert-danger" role="alert" data-bind="visible: VIEW.cqlError">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            <span class="sr-only">Error:</span>
-            <span id="cql-error"><span data-bind="text: VIEW.cqlErrorMsg"></span></span>
-          </div>
-
-          <div class="results" id="cql-results" data-bind="visible: VIEW.cqlItems().length > 0">
-            <h4>Results</h4>
+        <div class="results" id="cql-results">
+          <h4>Results</h4>
+          <div data-bind="foreach: {data: VIEW.selectStarResults, as: 'table'}">
+            <h3 data-bind="text: table.name"></h3>
             <table class="table table-striped">
               <thead>
-                <tr data-bind="foreach: {data: VIEW.cqlColumnNames, as: 'cName'}">
+                <tr data-bind="foreach: {data: table.columns(), as: 'cName'}">
                   <th> <span data-bind="text: cName"></span> </th>
                 </tr>
               </thead>
-              <tbody data-bind="foreach: VIEW.cqlItems">
-                <tr data-bind="foreach: $parent.cqlColumnNames">
-                    <td data-bind="text: $parent[$data]"></td>
+              <tbody data-bind="foreach: table.rows">
+                <tr data-bind="foreach: $parent.columns()">
+                  <td data-bind="text: $parent[$data]"></td>
                 </tr>
               </tbody>
             </table>
           </div>
         </div>
-        <!-- ================================== TABLES TAB here ==================================  -->
-        <div id="tab-tables">
-          <h3>Let's Work With Tables</h3>
-          <div class="checkbox">
-            <div id="meta-display">
-              <div data-bind="foreach: {data: VIEW.META, as: 'keyspace'}">
-                <h4>Keyspace: <span data-bind="text: keyspace.name"></span></h4>
-                <div data-bind="foreach: { data: keyspace.tables, as: 'table' }">
-                  <label><input type="checkbox" data-bind="value: keyspace.name + '.' + table.name" ><span data-bind="text: table.name"></span></label>
-                </div>
-              </div>
+      </div>
+      <!-- ================================== META TAB here ==================================  -->
+      <div id="tab-meta">
+        <h3>Metadata</h3>
+        <p>What the db looks like</p>
+
+        <div id="meta-display">
+          <div class="panel panel-warning keyspace-meta" data-bind="foreach: {data: VIEW.META, as: 'keyspace'}">
+            <div class="panel-heading"><span data-bind="text: keyspace.name"></span> <span class="tbl-collapse">[-]</span></div>
+            <div class="table-meta panel-body">
+              <ul class="list-group" data-bind="foreach: { data: keyspace.tables, as: 'table' }">
+                <li class="list-group-item">
+                  <h4><span data-bind="text: table.name"></span> <small>[-]</small></h4>
+                  <ul class="list-group" data-bind="foreach: { data: table.columns, as: 'column' }">
+                    <li class="list-group-item meta-columns">
+                      <b><span class="cql-col"  data-bind="text: column.name"></span></b>
+                      <span class="cql-type" data-bind="text: column.type"></span> 
+                      <span class="cql-kind"  data-bind="text: column.kind"></span>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
             </div>
           </div>
-          <div class="btn-toolbar">
-            <button type="button" class="btn btn-success">
-              <span class="glyphicon glyphicon-list" aria-hidden="true"></span> Select *
-            </button>
-            <button type="button" class="btn btn-danger">
-              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Truncate
-            </button>
-          </div>
-
-          <div class="results" id="cql-results">
-            <h4>Results</h4>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>Row</th>
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Email</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>John</td>
-                  <td>Carter</td>
-                  <td>johncarter@mail.com</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <!-- ================================== META TAB here ==================================  -->
-        <div id="tab-meta">
-          <h3>Metadata</h3>
-          <p>What the db looks like</p>
-
-          <div id="meta-display">
-            <div class="panel panel-warning keyspace-meta" data-bind="foreach: {data: VIEW.META, as: 'keyspace'}">
-              <div class="panel-heading"><span data-bind="text: keyspace.name"> </span> <span class="tbl-collapse">[-]</span></div>
-              <div class="table-meta panel-body">
-                <ul class="list-group" data-bind="foreach: { data: keyspace.tables, as: 'table' }">
-                  <li class="list-group-item">
-                    <h4><span data-bind="text: table.name"></span> <small>[-]</small></h4>
-                    <ul class="list-group" data-bind="foreach: { data: table.columns, as: 'column' }">
-                      <li class="list-group-item meta-columns">
-                        <b><span class="cql-col"  data-bind="text: column.name"></span></b>
-                        <span class="cql-type" data-bind="text: column.type"></span> 
-                        <span class="cql-kind"  data-bind="text: column.kind"></span>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-        </div>
-        <!-- ================================== OTHER TAB here ==================================  -->
-        <div id="tab-other">
-          <h3>Other..</h3>
-          <p>Some other stuff I haven't thought of yet..</p>
         </div>
 
-      </div><!-- /.container -->
+      </div>
+      <!-- ================================== OTHER TAB here ==================================  -->
+      <div id="tab-other">
+        <h3>Other..</h3>
+        <p>Some other stuff I haven't thought of yet..</p>
+      </div>
+
+    </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -194,29 +258,23 @@
 
     <script>
       $(function() {
-
-        $('.panel-heading').click(function() {
-          $(this).next('.panel-body').toggle();
-          console.log($(this));
-        });
-
-//        $(".alert").hide();
-//        $(".results").hide();
-
         // set up top menu and tabs
         initTabMenu();
 
         // Actual app code
         initCqlTab();
         loadMeta();
+
+        initTableTab();
       });
 
       // globals for knockout js
       var VIEW = {
-          META: ko.observableArray(),
+          META: ko.observableArray([]),
           cqlItems: ko.observableArray(),
           cqlError: ko.observable(false),
-          cqlErrorMsg: ko.observable('some error')
+          cqlErrorMsg: ko.observable('some error'),
+          selectStarResults: ko.observableArray([])
       }
 
       VIEW.cqlColumnNames = ko.computed(function () {
@@ -288,6 +346,50 @@
 
       }
 
+      // object used for Table Tab's results
+      function TableDump(nameIn) {
+        this.name = nameIn;
+        this.rows = [];
+        this.columns = function() {
+          if (this.rows.length == 0) return [];
+          var first = this.rows[0];
+          var colNames = [];
+          for (var key in first) {
+            if (first.hasOwnProperty(key)) {
+              colNames.push(key);
+            }
+          }
+          return colNames;
+        };
+      }
+
+      function initTableTab() {
+        $('#select-star-button').click(function() {
+          var tableList = $('.table-selector-checkbox:checked').map(function(_, el) { return $(el).val(); }).get();
+          selectStar(tableList);
+        });
+      }
+
+      function selectStar(tableList) {
+        
+        $(tableList).each(function() {
+          var tableName = this;
+          var cqlQuery = "SELECT * FROM " + tableName + ";"
+          $.getJSON("/api/cql?query=" + cqlQuery, function(data) {
+            console.log(tableName + ": " + data);
+
+            var td = new TableDump(tableName);
+            if (data.length > 0){
+              td.rows = data;
+            } else {
+              td.rows = [{"result": "no rows"}];
+            }
+
+            VIEW.selectStarResults.push(td);
+
+          });
+        });
+      }
 
       function loadMeta() {
           $.getJSON( "/api/meta", function( data ) {
@@ -334,14 +436,9 @@
                   }
                   colList.push(column)
                 }
-
+                //console.log(colList);
                 colList.sort(function(a, b){
-                  if (a.kind == "") {
-                    return 1;
-                  } else {
-                    // TODO return a.kind.localeCompare(b.kind);
-                    return -1;               
-                  }
+                    return -a.kind.localeCompare(b.kind);
                 });
 
                 var table = {
@@ -366,4 +463,4 @@
     </script>
 
   </body>
-  </html>
+</html>
