--- a/static/index.html
+++ b/static/index.html
@@ -25,6 +25,9 @@
         body {
           padding-top: 60px;
         }
+        #main {
+          margin-bottom: 200px;
+        }
         /* Meta display */
         li.meta-columns span {
           display: inline-block;
